[升级Qt版本并全面优化CI/CD工作流配置]: 将项目基础工具链升级到Qt 6.10.1版本，同时更新所有GitHub Actions工作流配置，提升构建系统的稳定性和一致性
- **Qt版本升级**: 将项目从Qt 6.10.0升级到Qt 6.10.1，更新了GitHub Actions依赖安装配置、CMake配置文件和Windows平台的qsb编译脚本，确保使用最新的Qt框架功能
- **CI/CD工具链更新**: 将所有GitHub Actions工作流中的关键actions升级到最新版本，包括checkout从v5升级到v6、cache从v4升级到v5，提升工作流执行效率和稳定性
- **构建工具完善**: 在Linux构建环境中增加autoconf、autoconf-archive、automake和libtool等构建工具链，确保复杂的跨平台编译任务能够顺利完成
- **vcpkg基线更新**: 更新vcpkg的builtin-baseline到最新版本b8927a1，同步最新的第三方库依赖和安全修复
- **代码格式规范化**: 统一所有工作流文件的字符串引用格式，从混合单双引号统一为双引号，提升配置文件的格式一致性
- **工作流配置优化**: 改进delete_workflow.yml工作流的输入参数逻辑，修复条件表达式格式，增加默认值配置，提升用户体验

--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -1,30 +1,30 @@
-name: 'Install Build Dependencies'
-description: 'Install vcpkg libraries and Qt environment for cross-platform builds'
+name: "Install Build Dependencies"
+description: "Install vcpkg libraries and Qt environment for cross-platform builds"
 
 inputs:
   vcpkg_libs:
-    description: 'vcpkg libraries to install'
+    description: "vcpkg libraries to install"
     required: false
-    default: 'breakpad crashpad freeimage giflib opencv[contrib,thread] tl-expected'
+    default: "breakpad crashpad freeimage giflib opencv[contrib,thread] tl-expected"
     type: string
   qt_modules:
-    description: 'Qt modules to install'
+    description: "Qt modules to install"
     required: false
-    default: 'qt5compat qtnetworkauth qtimageformats'
+    default: "qt5compat qtnetworkauth qtimageformats"
     type: string
   qt_ver:
-    description: 'Qt version to install'
+    description: "Qt version to install"
     required: false
-    default: '6.10.0'
+    default: "6.10.1"
     type: string
 
 runs:
-  using: 'composite'
+  using: "composite"
 
   steps:
     - name: Install Custom VCPKG
       uses: RealChuan/install-vcpkg@main
-        
+
     - name: Delete vcpkg.json
       shell: bash
       run: |
@@ -32,8 +32,8 @@ runs:
 
     - name: Cache windows vcpkg
       if: runner.os == 'Windows'
-      uses: actions/cache@v4
-      with: 
+      uses: actions/cache@v5
+      with:
         path: C:\vcpkg\installed
         key: ${{ runner.os }}-vcpkg-installed-${{ github.sha }}
         restore-keys: |
@@ -42,8 +42,8 @@ runs:
 
     - name: Cache macos or linux vcpkg
       if: runner.os == 'macOS' || runner.os == 'Linux'
-      uses: actions/cache@v4
-      with: 
+      uses: actions/cache@v5
+      with:
         path: /usr/local/share/vcpkg/installed
         key: ${{ runner.os }}-vcpkg-installed-${{ github.sha }}
         restore-keys: |
@@ -60,8 +60,8 @@ runs:
           --clean-buildtrees-after-build --clean-packages-after-build \
           || (cat C:/vcpkg/installed/vcpkg/issue_body.md && exit 1)
         # vcpkg install ${{ inputs.vcpkg_libs }} --triplet x64-windows-static-md \
-        #   --clean-buildtrees-after-build --clean-packages-after-build \
-        #   || (cat C:/vcpkg/installed/vcpkg/issue_body.md && exit 1)
+        #  --clean-buildtrees-after-build --clean-packages-after-build \
+        #  || (cat C:/vcpkg/installed/vcpkg/issue_body.md && exit 1)
 
     - name: Install dependencies on macos
       if: runner.os == 'macOS'
