--- a/.github/workflows/qmake.yml
+++ b/.github/workflows/qmake.yml
@@ -1,34 +1,34 @@
 name: QMake Build
 
-on: 
+on:
   push:
     paths-ignore:
-        - 'cmake/**' 
-        - 'docs/**'
-        - 'packaging/**'
-        - 'translations/**'
-        - '**/CMakeLists.txt'
-        - '**/*.md'
-        - '**/*.txt'
-        - '**/.clang-*'
-        - '**/.gitignore'
-        - '**/LICENSE*'
-        - '**/README*'
-        - 'vcpkg.json'    
+      - "cmake/**"
+      - "docs/**"
+      - "packaging/**"
+      - "translations/**"
+      - "**/CMakeLists.txt"
+      - "**/*.md"
+      - "**/*.txt"
+      - "**/.clang-*"
+      - "**/.gitignore"
+      - "**/LICENSE*"
+      - "**/README*"
+      - "vcpkg.json"
   pull_request:
     paths-ignore:
-        - 'cmake/**' 
-        - 'docs/**'
-        - 'packaging/**'
-        - 'translations/**'
-        - '**/CMakeLists.txt'
-        - '**/*.md'
-        - '**/*.txt'
-        - '**/.clang-*'
-        - '**/.gitignore'
-        - '**/LICENSE*'
-        - '**/README*'
-        - 'vcpkg.json'  
+      - "cmake/**"
+      - "docs/**"
+      - "packaging/**"
+      - "translations/**"
+      - "**/CMakeLists.txt"
+      - "**/*.md"
+      - "**/*.txt"
+      - "**/.clang-*"
+      - "**/.gitignore"
+      - "**/LICENSE*"
+      - "**/README*"
+      - "vcpkg.json"
 
 env:
   MACOSX_DEPLOYMENT_TARGET: 13.0
@@ -51,14 +51,14 @@ jobs:
             arch: arm64
 
     steps:
-      - uses: actions/checkout@v5
-        with: 
+      - uses: actions/checkout@v6
+        with:
           fetch-depth: 1
-          
+
       - uses: ./.github/actions/install-dependencies
 
       - uses: RealChuan/install-jom@main
-        
+
       - name: Create build directory
         shell: bash
         run: mkdir -p ${{ env.BUILD_DIR }}
@@ -71,7 +71,7 @@ jobs:
           ..\packaging\windows\Enter-VsDevShell.ps1
           & qmake ..\.
           & jom
-        
+
       - name: Build linux
         if: runner.os == 'Linux'
         working-directory: ${{ env.BUILD_DIR }}
