--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -3,47 +3,47 @@ name: CodeQL
 on:
   push:
     paths-ignore:
-      - 'docs/**'
-      - 'packaging/**'
-      - 'qmake/**'
-      - 'translations/**'
-      - '**/*.md'
-      - '**/*.txt'
-      - '**/.clang-*'
-      - '**/.gitignore'
-      - '**/*.pri'
-      - '**/LICENSE*'
-      - '**/*.pro'
-      - '**/README*'
+      - "docs/**"
+      - "packaging/**"
+      - "qmake/**"
+      - "translations/**"
+      - "**/*.md"
+      - "**/*.txt"
+      - "**/.clang-*"
+      - "**/.gitignore"
+      - "**/*.pri"
+      - "**/LICENSE*"
+      - "**/*.pro"
+      - "**/README*"
     branches-ignore:
-        - 'dependabot/**'
+      - "dependabot/**"
   pull_request:
     paths-ignore:
-      - 'docs/**'
-      - 'packaging/**'
-      - 'qmake/**'
-      - 'translations/**'
-      - '**/*.md'
-      - '**/*.txt'
-      - '**/.clang-*'
-      - '**/.gitignore'
-      - '**/*.pri'
-      - '**/LICENSE*'
-      - '**/*.pro'
-      - '**/README*'
+      - "docs/**"
+      - "packaging/**"
+      - "qmake/**"
+      - "translations/**"
+      - "**/*.md"
+      - "**/*.txt"
+      - "**/.clang-*"
+      - "**/.gitignore"
+      - "**/*.pri"
+      - "**/LICENSE*"
+      - "**/*.pro"
+      - "**/README*"
     branches-ignore:
-        - 'dependabot/**'
-        
+      - "dependabot/**"
+
   schedule:
-    - cron: '0 0 1 * *'
+    - cron: "0 0 1 * *"
   workflow_dispatch:
-  
+
 jobs:
   CodeQL:
     runs-on: ubuntu-latest
-  
-    steps:      
-      - uses: actions/checkout@v5
+
+    steps:
+      - uses: actions/checkout@v6
         with:
           fetch-depth: 1
 
@@ -52,11 +52,10 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
         with:
-            languages: cpp
+          languages: cpp
 
       - name: Autobuild
         uses: github/codeql-action/autobuild@v4
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
-        
